SET(CMAKE_INSTALL_PREFIX /opt/iqr)
SET(CMAKE_VERBOSE_MAKEFILE TRUE) 

#MESSAGE( STATUS "JOYSTICK:CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
#MESSAGE( STATUS "JOYSTICK:CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_DEFINITIONS(-DQT_THREAD_SUPPORT -D_REENTRANT -DQT_NO_DEBUG -DIQRMODULE)

SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})


IF(UNIX)
  SET (libSrc 
    joystick.cpp
    moduleJoystick.cpp
  )
ENDIF(UNIX)

IF(WIN32)
  SET (libSrc 
    joystick_windows.cpp
    moduleJoystick.cpp
  )
ENDIF(WIN32)


INCLUDE_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../../../
  ${QT_INCLUDE_DIR}
)


ADD_LIBRARY(moduleJoystick SHARED ${libSrc})

IF(WIN32)
  TARGET_LINK_LIBRARIES(moduleJoystick
    ${QT_LIBRARIES}
    ${CMAKE_CURRENT_SOURCE_DIR}/../../../Common/Item/libIqrItem.dll
    WinMM
  )
ENDIF(WIN32)



SET_TARGET_PROPERTIES(moduleJoystick PROPERTIES PREFIX "")

IF(UNIX)
  INSTALL(TARGETS 
    moduleJoystick
    LIBRARY DESTINATION lib/iqr/Modules/ 
    ARCHIVE DESTINATION lib/iqr/Modules/
    RUNTIME DESTINATION bin 
  )
ENDIF(UNIX)

IF(WIN32)
  INSTALL(TARGETS 
    moduleJoystick
    LIBRARY DESTINATION Modules/ COMPONENT types 
    ARCHIVE DESTINATION Modules/ 
    RUNTIME DESTINATION Modules/ COMPONENT types 
  )
ENDIF(WIN32)

