cmake_minimum_required(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/config)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)


SET(CMAKE_VERBOSE_MAKEFILE TRUE)


ADD_DEFINITIONS(
  -DQT_THREAD_SUPPORT 
  -DQT_NO_DEBUG 
  -D_REENTRANT 
  -DIQRMODULE
)


SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})


IF(WIN32)
set(OpenCV_ROOT_DIR "c:/OpenCV2.0")
ENDIF(WIN32)

FIND_PACKAGE(OpenCV COMPONENTS CV CXCORE CVAUX HIGHGUI	)



SET (libSrc
openCVmpeg.cpp
)


INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../../
  ${QT_INCLUDE_DIR}
  ${OPENCV_INCLUDE_DIR}
)



ADD_LIBRARY(openCVmpeg SHARED ${libSrc})


#there are some problems with OpenCV_LIBRARIES on windows...
IF (NOT OPENCV_LIBRARIES )
  IF(WIN32)
    set (OPENCV_LIBRARIES 
    libcv200
    libcvaux200
    libcxcore200
    libcxts200
    libhighgui200
    libml200
    )
  ENDIF(WIN32)
ENDIF (NOT OPENCV_LIBRARIES )

IF(UNIX)
  TARGET_LINK_LIBRARIES(openCVmpeg
    ${OPENCV_LIBRARIES}
  )
ENDIF(UNIX)

IF(WIN32)
  TARGET_LINK_LIBRARIES(openCVmpeg
    ${OPENCV_LIBRARIES}
    ${QT_LIBRARIES}
    ${CMAKE_CURRENT_SOURCE_DIR}/../../../Common/Item/libIqrItem.dll
  )
ENDIF(WIN32)



SET_TARGET_PROPERTIES(openCVmpeg PROPERTIES PREFIX "")

IF(UNIX)
  INSTALL(TARGETS
    openCVmpeg
    LIBRARY DESTINATION lib/iqr/Modules/
    ARCHIVE DESTINATION lib/iqr/Modules/
    RUNTIME DESTINATION bin 
  )
ENDIF(UNIX)

IF(WIN32)
  INSTALL(TARGETS
    openCVmpeg
    LIBRARY DESTINATION Modules/ COMPONENT types 
    ARCHIVE DESTINATION Modules/ 
    RUNTIME DESTINATION Modules/ COMPONENT types 
  )
ENDIF(WIN32)


