SET(CMAKE_INSTALL_PREFIX /opt/iqr)
SET(CMAKE_VERBOSE_MAKEFILE TRUE) 

#MESSAGE( STATUS "JOYSTICK:CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
#MESSAGE( STATUS "JOYSTICK:CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_DEFINITIONS(-DQT_THREAD_SUPPORT -D_REENTRANT -DQT_NO_DEBUG -DIQRMODULE)

SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt3 REQUIRED)



SET (libSrc 
  joystick.cpp
  moduleJoystick.cpp
)


INCLUDE_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../../../
  ${QT_INCLUDE_DIR}
)


ADD_LIBRARY(moduleJoystick SHARED ${libSrc})


SET_TARGET_PROPERTIES(moduleJoystick PROPERTIES PREFIX "")

INSTALL(TARGETS 
  moduleJoystick
#  LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../../lib/Modules/ 
#  LIBRARY DESTINATION lib/Modules/ 
  LIBRARY DESTINATION lib/iqr/Modules/ 
)

