SET(CMAKE_VERBOSE_MAKEFILE TRUE)

SET (libSrc moduleTest.cpp)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -DIQRMODULE -DQT_THREAD_SUPPORT")

SET(QT_MT_REQUIRED true)
FIND_PACKAGE(Qt3 REQUIRED)

INCLUDE_DIRECTORIES(/usr/include/iqr ${QT_INCLUDE_DIR})

ADD_LIBRARY(moduleTest SHARED ${libSrc})

SET_TARGET_PROPERTIES(moduleTest PROPERTIES PREFIX "")

#install(TARGETS moduleTest
#  LIBRARY DESTINATION $ENV{IQR2_USER_MODULE_PATH}
#)


