SET(CMAKE_VERBOSE_MAKEFILE TRUE)

SET (libSrc neuronTest.cpp)

FIND_PACKAGE(Qt3 REQUIRED)

INCLUDE_DIRECTORIES(/usr/include/iqr)


ADD_LIBRARY(neuronTest SHARED ${libSrc})

SET_TARGET_PROPERTIES(neuronTest PROPERTIES PREFIX "")

#install(TARGETS neuronTest
#  LIBRARY DESTINATION $ENV{IQR2_USER_NEURON_PATH}
#)


