SET(CMAKE_INSTALL_PREFIX /opt/iqr)
SET(CMAKE_VERBOSE_MAKEFILE TRUE) 

IF(CMAKE_OSX_ARCHITECTURES)
SET(CMAKE_CXX_FLAGS 
"${CMAKE_CXX_FLAGS}  -undefined dynamic_lookup"
)                           
ENDIF(CMAKE_OSX_ARCHITECTURES)

ADD_DEFINITIONS(-DQT_THREAD_SUPPORT -D_REENTRANT -DQT_NO_DEBUG -DIQRMODULE)

SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt3 REQUIRED)


SET (libSrc 
  moduleLegoMindStorm.cpp rcxlib.cc
)

INCLUDE_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../
  ${QT_INCLUDE_DIR}
)


#ADD_SUBDIRECTORY(SSCL)

ADD_LIBRARY(moduleLegoMindStorm SHARED ${libSrc})


SET_TARGET_PROPERTIES(moduleLegoMindStorm PROPERTIES PREFIX "")

#TARGET_LINK_LIBRARIES(moduleLegoMindStorm
#  SSCL
#)
#

INSTALL(TARGETS 
  moduleLegoMindStorm
#  LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../lib/Modules/ 
#  LIBRARY DESTINATION lib/Modules/ 
  LIBRARY DESTINATION lib/iqr/Modules/ 
)

