SET(CMAKE_INSTALL_PREFIX /opt/iqr)
SET(CMAKE_VERBOSE_MAKEFILE TRUE) 

ADD_DEFINITIONS(-DQT_THREAD_SUPPORT -D_REENTRANT -DQT_NO_DEBUG -DIQRMODULE -DUSE_USBVIDEO_AS_BASECLASS )

SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt4 REQUIRED)


EXEC_PROGRAM(uname
 ARGS "-r"
 OUTPUT_VARIABLE KVER
)

EXEC_PROGRAM(uname
 ARGS "-p"
 OUTPUT_VARIABLE KPROC
)


IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")

SET (libSrc 
  moduleUSBVideoColorPT.cpp
  ../USBVideoColor/moduleUSBVideoColor.cpp
  ../Common/v4ldemos/v4l.c
  ${CMAKE_CURRENT_SOURCE_DIR}/../Common/ccvt-0.3/ccvt_misc.c
)
ELSE(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")

SET (libSrc 
  moduleUSBVideoColorPT.cpp
  ../USBVideoColor/moduleUSBVideoColor.cpp
  ../Common/v4ldemos/v4l.c
  ${CMAKE_CURRENT_SOURCE_DIR}/../Common/ccvt-0.3/ccvt_c2.c
)
ENDIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")





IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
#this hack is needed because cmake currently does not support assembler files...
ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/ccvt_mmx.o
 COMMAND gcc -c -I. -I/lib/modules/`uname -r`/build/include  -I/lib/modules/`uname -r`/source/include ${CMAKE_CURRENT_SOURCE_DIR}/../Common/ccvt-0.3/ccvt_mmx.S
 DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../Common/ccvt-0.3/ccvt_mmx.S )
ENDIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")



INCLUDE_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../USBVideoColor/
  ${CMAKE_CURRENT_SOURCE_DIR}/../Common
  ${CMAKE_CURRENT_SOURCE_DIR}/../Common/v4ldemos
  ${CMAKE_CURRENT_SOURCE_DIR}/../../Common/
  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../
  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../FE/icons/ModuleIcons/
  ${QT_INCLUDE_DIR}
  /usr/src/linux-${CMAKE_SYSTEM_VERSION}/include/media
  /usr/src/linux/include/media
  /usr/src/linux/drivers/usb/media/pwc
  /usr/src/kernels/${CMAKE_SYSTEM_VERSION}/include/media
  /usr/src/kernels/${CMAKE_SYSTEM_VERSION}-${KPROC}/include/media
  /lib/modules/${KVER}/build/include/media
)


IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
ADD_LIBRARY(moduleUSBVideoColorPT SHARED ${libSrc} ccvt_mmx.o)
ELSE(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
ADD_LIBRARY(moduleUSBVideoColorPT SHARED ${libSrc})
ENDIF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i386" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i486" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i586" OR 
    ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")




#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../Common/ccvt-0.3 ${CMAKE_CURRENT_SOURCE_DIR}/../Common/ccvt-0.3) 


SET_TARGET_PROPERTIES(moduleUSBVideoColorPT PROPERTIES PREFIX "")

INSTALL(TARGETS 
  moduleUSBVideoColorPT
#  LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../lib/Modules/ 
#  LIBRARY DESTINATION lib/Modules/ 
  LIBRARY DESTINATION lib/iqr/Modules/ 
  ARCHIVE DESTINATION lib/iqr/Modules/
  RUNTIME DESTINATION bin 

)

#TARGET_LINK_LIBRARIES(moduleUSBVideoColorPT
#  ccvt
#)



