cmake_minimum_required(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/config)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)


SET(CMAKE_VERBOSE_MAKEFILE TRUE)


ADD_DEFINITIONS(
  -DQT_THREAD_SUPPORT 
  -DQT_NO_DEBUG 
  -D_REENTRANT 
  -DIQRMODULE
)


SET(QT_MT_REQUIRED TRUE)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

FIND_PACKAGE(OpenCV REQUIRED)

SET (libSrc
openCVvideo.cpp
)


INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../../
  ${QT_INCLUDE_DIR}
  ${OPENCV_INCLUDE_DIR}
)


ADD_LIBRARY(openCVvideo SHARED ${libSrc})


TARGET_LINK_LIBRARIES(openCVvideo
  ${OpenCV_LIBS}
  ${QT_LIBRARIES}
  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../Common/Item/libIqrItem.dll
)


#replace this with ENV variable

SET_TARGET_PROPERTIES(openCVvideo PROPERTIES PREFIX "")

IF(UNIX)
  INSTALL(TARGETS
    openCVvideo
    LIBRARY DESTINATION lib/iqr/Modules/
    ARCHIVE DESTINATION lib/iqr/Modules/
    RUNTIME DESTINATION bin 
  )
ENDIF(UNIX)

IF(WIN32)
  INSTALL(TARGETS
    openCVvideo
    LIBRARY DESTINATION Modules/ COMPONENT types 
    ARCHIVE DESTINATION Modules/ 
    RUNTIME DESTINATION Modules/ COMPONENT types 
  )
ENDIF(WIN32)


